--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "license": "GPL-2.0",
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~4.1",
-        "illuminate/cache": "~4.1"
+        "illuminate/support": "4.*",
+        "illuminate/cache": "4.*"
     },
     "autoload": {
         "psr-0": {
